	that is responsible to calculate the correct offset based
	on variable number of size_t arguments. currently the number
	of arguments can be 1 (vector indexing) and 2 (matrix indexing)
	but arbitrary number of arguments will be added later 
	for arbitrary array-like indexing.

	* src/Rcpp/SimpleVector.h: outsourcing offset calculation 
	to VectorBase::offset
	
2010-01-25  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/wrap.h: wrap is back at being a template. The 
	template parameter T is first converted to SEXP implicitely 
	and the wrap(SEXP) method is used. This allows clients to only have to 
	implement an implicit conversion to SEXP operator for their class
	and have wrap for free.

	* src/Rcpp/SEXP_Vector.h: factored out ExpressionVector and 
	GenericVector into a templated SEXP_Vector class parameterized
	by the SEXP type (VECSXP or EXPRSXP). GenericVector and 
	ExpressionVector now are generated from the template. This will
	ease adding features to both classes.

	* src/as.cpp: also use coercion for as<bool>, as<int>, as<double>
	as<Rbyte> (FR #768)

	* src/Rcpp/as.h: smarter template as<T>, now the template
	attempts to create an object by passing the SEXP as the first
	parameter, so any class that has a constructor taking a SEXP
	can be as<>'ed. see item below for how this can be useful

	* src/Rcpp/Environment.h: lhs use of Environment::Binding is now
	a bit smarter and uses as<> to implicitely convert the SEXP
	to the requested type, so that if as<Foo> makes sense, this
	works: Foo foo = env["x"] ;

	* src/Rcpp/Environment.h: Environment::assign gains a templated
	form so that we can assign anything that can be wrapped to
	a name in an environment.

	* inst/unitTests/runit.environments.R: new unit test
	'test.environment.assign.templated' to test the templated assign

	* src/Makevars(.win?): listen to the RCPP_CXX0X environment variable
	and if set to "yes" attempt to add c++0x support if possible

2010-01-24  Dirk Eddelbuettel  <edd@debian.org>